[package]
name = "seaward"
version = "1.0.2" #:version
authors = ["M3nny"]
description = "seaward is a crawler which searches for links or a specified word in a website."
documentation = "https://github.com/M3nny/seaward"
homepage = "https://github.com/M3nny/seaward"
repository = "https://github.com/M3nny/seaward"
keywords = ["cli", "web-crawler", "web-scraping", "rustcrawler"]
categories = ["command-line-utilities"]
license = "MIT"
edition = "2021"

[dependencies]
tokio = {version = "1.29.1", features = ["macros", "rt", "signal", "rt-multi-thread"]}
clap = {version = "4.3.11", features = ["cargo"]}
reqwest = "0.11"
scraper = "0.17"
colored = "2.0"
regex = "1.0"
